recursion.lessons.recursion.tree.Tree.scala.error
Tree:7: error: not enough arguments for method tree: (steps: Int, length: Double, angle: Double, shrink: Double)Unit.
Unspecified value parameter shrink.
    tree(steps-1,length,length*shrink)
        ^